Removing sky texture for now

--- a/templates/aframe.html
+++ b/templates/aframe.html
@@ -31,8 +31,7 @@
     </script>
   </head>
   <body>
-    <a-scene style="background-color: #000; background-position: center; background-repeat: no-repeat;">
-      <a-sky src="http://cortex.io/sol/2k_stars.jpg"></a-sky>
+    <a-scene style="background-color: #000;">
       <a-entity light="type: directional; color: #EEE; intensity: 1000;" position="-1 1 0"></a-entity>
 
       <a-camera position="0 3000 0" rotation="-90 0 0" look-controls wasd-controls="acceleration: 50000;">
