--- a/templates/aframe.html
+++ b/templates/aframe.html
@@ -4,6 +4,7 @@
     <title>sol</title>
     <script type="text/javascript" src="/static/js/socket.io.slim.js"></script>
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <script src="https://wizgrav.github.io/aframe-effects/dist/aframe-effects.min.js"></script>
     <script type="text/javascript">
     window.onload = function() {
         var socket = io();
@@ -31,14 +32,14 @@
     </script>
   </head>
   <body>
-    <a-scene style="background-color: #000;">
+    <a-scene effects="bloom, fxaa" fxaa style="background-color: #000;">
       <a-entity light="type: directional; color: #EEE; intensity: 1000;" position="-1 1 0"></a-entity>
 
       <a-camera position="0 3000 0" rotation="-90 0 0" look-controls wasd-controls="acceleration: 50000;">
           <a-text id="time" position="0 0 -1" rotation="0 0 0" color="#ffffff" height="1" width="1" value=""></a-text>
       </a-camera>
 
-      <a-entity id="sun" position="0 0 0" geometry="primitive: sphere; radius: 30; segmentsHeight: 100; segmentsWidth: 100;" material="src: http://cortex.io/sol/2k_sun.jpg; shader: flat;">
+      <a-entity id="sun" scale="5 5 5" bloom="strength: 1.6; radius: 0.3;" position="0 0 0" geometry="primitive: sphere; radius: 30; segmentsHeight: 100; segmentsWidth: 100;" material="shader: flat;">
         <a-animation attribute="rotation" dur="3000" from="0 0 0" to="0 360 0" repeat="indefinite" easing="linear"></a-animation>
       </a-entity>
 
