--- a/templates/aframe.html
+++ b/templates/aframe.html
@@ -51,8 +51,8 @@
     <a-scene effects="bloom, fxaa" fxaa style="background-color: #000;">
       <a-entity light="type: directional; color: #EEE; intensity: 1000;" position="-1 1 0"></a-entity>
 
-      <a-camera position="0 3000 0" rotation="-90 0 0" look-controls wasd-controls="acceleration: 50000;">
-          <a-text id="time" position="0 0 -1" rotation="0 0 0" color="#ffffff" height="1" width="1" value=""></a-text>
+      <a-camera position="0 7000 0" rotation="-90 0 0" look-controls wasd-controls="wsAxis: y; acceleration: 50000;">
+          <a-text id="time" position="-1 0 -1" rotation="0 0 0" color="#ffffff" height="1" width="1" value=""></a-text>
       </a-camera>
 
       <a-entity id="sun" scale="5 5 5" bloom="strength: 1.6; radius: 0.3;" position="0 0 0" geometry="primitive: sphere; radius: 30; segmentsHeight: 100; segmentsWidth: 100;" material="shader: flat;">
